# protein_fitness

./: .gitignore  LICENSE  README.md  drive_pyroed.py  explore_results.py  pyproject.toml
peptide_fitness/: pyroed_design.py  read_data.py
